--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Image Search App</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <form class="form">
@@ -20,8 +19,10 @@
       <button type="submit">Search</button>
     </form>
 
-    <div class="loader hidden"></div>
+    <div class="loader"></div>
+
     <ul class="gallery"></ul>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
