--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Search App</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="icon" href="./public/favicon.svg" />
   </head>
   <body>
     <form class="form">
