--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 
     <ul class="gallery"></ul>
 
+    <button class="load-more">Load more</button>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
